--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -26,7 +26,7 @@
 [Day 024 - Max OS X 的 Dock效果]()  
 [Day 025 - 模拟书本的翻页效果]()  
 [Day 026 - Fancy watch](day026.html)  
-[Day 027 - 放大镜效果](day027.html)  // TODO  
+[Day 027 - 电商放大镜效果](day027.html)  // TODO: 添加n个图片
 [Day 028 - 返回顶部](day028.html)  
 [Day 029 - 像素画板](day029.html)  
 [Day 030 - 二，八，十，十六进制的转换](day030.html)  
@@ -59,5 +59,5 @@
 [Day 057 - 节拍器](day057.html)  // TODO  
 [Day 058 - 贝塞尔曲线](day058.html)  //TODO  
 [Day 059 - 太阳系](day059.html)  //TODO  
-[Day 060 - JavaScript实现撞击边界反弹](day060.html)
+[Day 060 - JavaScript实现撞击边界反弹](day060.html)  
 [Day 061 - 随机获取一句诗词](day061.html)  
