--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -26,7 +26,7 @@
 [Day 024 - Max OS X 的 Dock效果]()  
 [Day 025 - 模拟书本的翻页效果]()  
 [Day 026 - Fancy watch](day026.html)  
-[Day 027 - 电商放大镜效果](day027.html)  // TODO: 添加n个图片
+[Day 027 - 电商放大镜效果](day027.html)  
 [Day 028 - 返回顶部](day028.html)  
 [Day 029 - 像素画板](day029.html)  
 [Day 030 - 二，八，十，十六进制的转换](day030.html)  
