--- a/poetry/唐词.md
+++ b/poetry/唐词.md
@@ -21,6 +21,14 @@
 音尘绝，西风残照，汉家陵阙。
 ```
 
+## 菩萨蛮·平林漠漠烟如织
+### 唐代：李白
+```
+平林漠漠烟如织，寒山一带伤心碧。
+暝色入高楼，有人楼上愁。
+玉阶空伫立，宿鸟归飞急。
+何处是归程？长亭更短亭。
+```
 ## 菩萨蛮·人人尽说江南好
 ### 唐代：韦庄
 ```
