--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -945,13 +945,39 @@
 宣父犹能畏后生，丈夫未可轻年少。
 ```
 
-## 塞下曲六首·其一
+## 塞下曲六首
 ### 唐代：李白
 ```
 五月天山雪，无花只有寒。
 笛中闻折柳，春色未曾看。
 晓战随金鼓，宵眠抱玉鞍。
 愿将腰下剑，直为斩楼兰。
+
+天兵下北荒，胡马欲南饮。
+横戈从百战，直为衔恩甚。
+握雪海上餐，拂沙陇头寝。
+何当破月氏，然后方高枕。
+
+骏马似风飙，鸣鞭出渭桥。
+弯弓辞汉月，插羽破天骄。
+阵解星芒尽，营空海雾消。
+功成画麟阁，独有霍嫖姚。
+
+白马黄金塞，云砂绕梦思。
+那堪愁苦节，远忆边城儿。
+萤飞秋窗满，月度霜闺迟。
+摧残梧桐叶，萧飒沙棠枝。
+无时独不见，流泪空自知。
+
+塞虏乘秋下，天兵出汉家。
+将军分虎竹，战士卧龙沙。
+边月随弓影，胡霜拂剑花。
+玉关殊未入，少妇莫长嗟。
+
+烽火动沙漠，连照甘泉云。
+汉皇按剑起，还召李将军。
+兵气天上合，鼓声陇底闻。
+横行负勇气，一战净妖氛。
 ```
 
 ## 早发白帝城 / 白帝下江陵
@@ -1006,7 +1032,7 @@
 ### 唐代：李白
 ```
 众鸟高飞尽，孤云独去闲。
-相看两不厌，只有敬亭山。(只有 一作：惟 / 唯)
+相看两不厌，惟有敬亭山。
 ```
 
 ## 长干行·其一
@@ -1084,15 +1110,25 @@
 ## 侠客行
 ### 唐代：李白
 ```
+赵客缦胡缨，吴钩霜雪明。
+银鞍照白马，飒沓如流星。
 十步杀一人，千里不留行。
 事了拂衣去，深藏身与名。
+闲过信陵饮，脱剑膝前横。
+将炙啖朱亥，持觞劝侯嬴。
+三杯吐然诺，五岳倒为轻。
+眼花耳热后，意气素霓生。
+救赵挥金槌，邯郸先震惊。
+千秋二壮士，烜赫大梁城。
+纵死侠骨香，不惭世上英。
+谁能书阁下，白首太玄经。
 ```
 
 ## 黄鹤楼送孟浩然之广陵
 ### 唐代：李白
 ```
 故人西辞黄鹤楼，烟花三月下扬州。
-孤帆远影碧空尽，唯见长江天际流。 (唯 通：惟)
+孤帆远影碧空尽，唯见长江天际流。
 ```
 
 ## 把酒问月·故人贾淳令予问之
@@ -1108,22 +1144,50 @@
 唯愿当歌对酒时，月光长照金樽里。
 ```
 
-## 清平调·其一
+## 子夜吴歌·夏歌
+### 唐代：李白
+```
+镜湖三百里，菡萏发荷花。
+五月西施采，人看隘若耶。
+回舟不待月，归去越王家。
+```
+
+## 宣城见杜鹃花 / 子规
+### 唐代：李白
+```
+蜀国曾闻子规鸟，宣城还见杜鹃花。 
+一叫一回肠一断，三春三月忆三巴。
+```
+
+## 渌水曲
+## 唐代：李白
+```
+渌水明秋月，南湖采白蘋。
+荷花娇欲语，愁杀荡舟人。
+```
+
+## 山中与幽人对酌
+### 唐代：李白
+```
+两人对酌山花开，一杯一杯复一杯。
+我醉欲眠卿且去，明朝有意抱琴来。
+```
+
+## 清平调·名花倾国两相欢
+### 唐代：李白
+```
+名花倾国两相欢，常得君王带笑看。
+解释春风无限恨，沉香亭北倚栏杆。
+```
+
+## 清平调两首
 ### 唐代：李白
 ```
 云想衣裳花想容，春风拂槛露华浓。 
 若非群玉山头见，会向瑶台月下逢。
-```
 
-## 行路难·其一
-### 唐代：李白
-```
-金樽清酒斗十千，玉盘珍羞直万钱。(羞 通：馐；直 通：值)
-停杯投箸不能食，拔剑四顾心茫然。
-欲渡黄河冰塞川，将登太行雪满山。(雪满山 一作：雪暗天)
-闲来垂钓碧溪上，忽复乘舟梦日边。(碧 一作：坐)
-行路难！行路难！多歧路，今安在？
-长风破浪会有时，直挂云帆济沧海。
+一枝红艳露凝香，云雨巫山枉断肠。
+借问汉宫谁得似，可怜飞燕倚新妆。
 ```
 
 ## 下终南山过斛斯山人宿置酒
@@ -1165,7 +1229,7 @@
 ### 唐代：李白
 ```
 杨花落尽子规啼，闻道龙标过五溪。
-我寄愁心与明月，随风直到夜郎西。(随风 一作：随君)
+我寄愁心与明月，随风直到夜郎西。
 ```
 
 ## 客中行 / 客中作
@@ -1196,6 +1260,13 @@
 两水夹明镜，双桥落彩虹。
 人烟寒橘柚，秋色老梧桐。
 谁念北楼上，临风怀谢公。
+```
+
+## 玉阶怨
+### 唐代：李白
+```
+玉阶生白露，夜久侵罗袜。
+却下水晶帘，玲珑望秋月。(水晶 一作 水精)
 ```
 
 ## 赠孟浩然
@@ -1281,11 +1352,11 @@
 不敢高声语，恐惊天上人。
 ```
 
-## 清平调·其一
+## 九月十日即事
 ### 唐代：李白
 ```
-云想衣裳花想容，春风拂槛露华浓。 
-若非群玉山头见，会向瑶台月下逢。
+昨日登高罢，今朝更举觞。
+菊花何太苦，遭此两重阳？
 ```
 
 ## 长相思·其一
@@ -1382,7 +1453,7 @@
 会桃花之芳园，序天伦之乐事。
 群季俊秀，皆为惠连；吾人咏歌，独惭康乐。
 幽赏未已，高谈转清。开琼筵以坐花，飞羽觞而醉月。
-不有佳咏，何伸雅怀？如诗不成，罚依金谷酒数。(桃花 一作：桃李)
+不有佳咏，何伸雅怀？如诗不成，罚依金谷酒数。
 ```
 
 ## 蜀道难
