--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -61,3 +61,4 @@
 [Day 059 - 太阳系](day059.html)  //TODO  
 [Day 060 - JavaScript实现撞击边界反弹](day060.html)  
 [Day 061 - 随机获取一句诗词](day061.html)  
+[Day 062 - 身高体重指数(BMI)](day062.html)  
