--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -62,3 +62,4 @@
 [Day 060 - JavaScript实现撞击边界反弹](day060.html)  
 [Day 061 - 随机获取一句诗词](day061.html)  
 [Day 062 - 身高体重指数(BMI)](day062.html)  
+[Day 063 - CSS实现两个小球融合效果](day063.html)  
