--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -41,7 +41,7 @@
 [Day 039 - CSS实现各种形状](day039.html)  
 [Day 040 - 杨辉三角](day040.html)  
 [Day 041 - 页面浏览进度条](day041.html)  
-[Day 042 - 音乐播放器简易版](day042.html)  
+[Day 042 - 音乐播放器简易版](day042.html)  //TODO: 未完成，项目转移到music_player_web  
 [Day 043 - 获取按键的keyCode](day043.html)  
 [Day 044 - 显示二维码](day044.html)  
 [Day 045 - 电商网放大镜效果](day045.html)  
