--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -63,3 +63,4 @@
 [Day 061 - 随机获取一句诗词](day061.html)  
 [Day 062 - 身高体重指数(BMI)](day062.html)  
 [Day 063 - CSS实现两个小球融合效果](day063.html)  
+[Day 064 - base64的加密和解密](day064.html)  // TODO: base64编码
