--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -5,16 +5,16 @@
 [Day 003 - 下拉菜单](day003.html)  
 [Day 004 - 响应式下拉菜单](day004.html)  
 [Day 005 - mask 遮罩层](day005.html)  
-[Day 006 - background各项属性](day006.html)  
+[](day006.html)  
 [Day 007 - 旋转相册](day007.html)  
 [Day 008 - 点击图片放大至前端](day008.html)  
 [Day 009 - 元素拖动](day009.html)  
 [Day 010 - js实现网页版计算器](day010.html)  
-[Day 011 - 单词查询](day011.html)  
-[Day 012 - :nth Tester](day012.html)  
+[](day011.html)  
+[](day012.html)  
 [Day 013 - 所有单位的转换](day013.html)  
 [Day 014 - 化学元素周期表](day014.html)  
-[Day 015 - 中国历史年代表](day015.html)  
+[](day015.html)  
 [Day 016 - 下雨动画](day016.html)  
 [Day 017 - 网页版天气预报](day017.html)  
 [Day 018 - 手机旋转属性](day018.html)  
@@ -41,12 +41,12 @@
 [Day 039 - CSS实现各种形状](day039.html)  
 [Day 040 - 杨辉三角](day040.html)  
 [Day 041 - 页面浏览进度条](day041.html)  
-[Day 042 - 音乐播放器简易版](day042.html)  //TODO: 未完成，项目转移到music_player_web  
+[](day042.html)
 [Day 043 - 获取按键的keyCode](day043.html)  
 [Day 044 - 显示二维码](day044.html)  
-[Day 045 - 电商网放大镜效果](day045.html)  
+[](day045.html)  
 [Day 046 - 人生进度条](day046.html)  
-[Day 047 - 段子集](day047.html)  
+[](day047.html)  
 [Day 048 - 用CSS实现26个字母](day048.html)  
 [Day 049 - 判断两个子网是否位于同一个网络](day049.html)  
 [Day 050 - gank.io](day050.html)  
@@ -61,7 +61,7 @@
 [Day 059 - 太阳系](day059.html)  //TODO  
 [Day 060 - JavaScript实现撞击边界反弹](day060.html)  
 [Day 061 - 随机获取一句诗词](day061.html)  
-[Day 062 - 身高体重指数(BMI)](day062.html)  
+[](day062.html)  
 [Day 063 - CSS实现两个小球融合效果](day063.html)  
 [Day 064 - base64的加密和解密](day064.html)  
 [Day 065 - 任意内容转换为base64](day065.html)  
