--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -7,7 +7,7 @@
 [Day 005 - mask 遮罩层](day005.html)  
 [](day006.html)  
 [Day 007 - 旋转相册](day007.html)  
-[Day 008 - 点击图片放大至前端](day008.html)  
+[Day 008 - 点击图片放大至前端](day008.html)  //TODO:页面不是顺畅滑动
 [Day 009 - 元素拖动](day009.html)  
 [Day 010 - js实现网页版计算器](day010.html)  
 [](day011.html)  
@@ -28,7 +28,7 @@
 [Day 026 - Fancy watch](day026.html)  
 [Day 027 - 电商放大镜效果](day027.html)  
 [Day 028 - 返回顶部](day028.html)  
-[Day 029 - 像素画板](day029.html)  
+[Day 029 - Canvas画板](day029.html)  //TODO  
 [Day 030 - 二，八，十，十六进制的转换](day030.html)  
 [Day 031 - 富文本编辑器 version 0.1](day031.html)  
 [Day 032 - 日历](day032.html)  // TOTO  
@@ -61,7 +61,7 @@
 [Day 059 - 太阳系](day059.html)  //TODO  
 [Day 060 - JavaScript实现撞击边界反弹](day060.html)  
 [Day 061 - 随机获取一句诗词](day061.html)  
-[](day062.html)  
+[Day 062 - 歌词显示器](day062.html)  
 [Day 063 - CSS实现两个小球融合效果](day063.html)  
 [Day 064 - base64的加密和解密](day064.html)  
 [Day 065 - 任意内容转换为base64](day065.html)  
