--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -1009,6 +1009,15 @@
 直须看尽洛城花，始共春风容易别。
 ```
 
+## 玉楼春·别后不知君远近
+### 宋代：欧阳修
+```
+别后不知君远近。触目凄凉多少闷。
+渐行渐远渐无书，水阔鱼沉何处问。
+夜深风竹敲秋韵。万叶千声皆是恨。
+故欹单枕梦中寻，梦又不成灯又烬。
+```
+
 ## 蝶恋花·面旋落花风荡漾
 ### 宋代：欧阳修
 ```
@@ -1106,6 +1115,13 @@
 叶上初阳干宿雨、水面清圆，一一风荷举。
 故乡遥，何日去。家住吴门，久作长安旅。
 五月渔郎相忆否。小楫轻舟，梦入芙蓉浦。
+```
+
+## 减字木兰花·淮山隐隐
+### 宋代：淮上女
+```
+淮山隐隐，千里云峰千里恨。淮水悠悠，万顷烟波万顷愁。
+山长水远，遮断行人东望眼。恨旧愁新，有泪无言对晚春。
 ```
 
 ## 九张机
