--- a/poetry/清诗.md
+++ b/poetry/清诗.md
@@ -55,11 +55,29 @@
 谢娘别后谁能惜，飘泊天涯。寒月悲笳，万里西风瀚海沙。
 ```
 
+## 蝶恋花·出塞
+### 清代：纳兰性德
+```
+今古河山无定据。画角声中，牧马频来去。
+满目荒凉谁可语？西风吹老丹枫树。
+从前幽怨应无数。铁马金戈，青冢黄昏路。
+一往情深深几许？深山夕照深秋雨。
+```
+
 ## 浣溪沙·残雪凝辉冷画屏
 ### 清代：纳兰性德
 ```
 残雪凝辉冷画屏，落梅横笛已三更，更无人处月胧明。
 我是人间惆怅客，知君何事泪纵横，断肠声里忆平生。
+```
+
+## 临江仙·寒柳
+### 清代：纳兰性德
+```
+飞絮飞花何处是，层冰积雪摧残，疏疏一树五更寒。
+爱他明月好，憔悴也相关。
+最是繁丝摇落后，转教人忆春山。湔裙梦断续应难。
+西风多少恨，吹不散眉弯。
 ```
 
 ## 画堂春·一生一代一双人
