--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -1535,6 +1535,13 @@
 日暮乡关何处是？烟波江上使人愁。
 ```
 
+## 赠去婢
+###唐代：崔郊
+```
+公子王孙逐后尘，绿珠垂泪滴罗巾。
+侯门一入深似海，从此萧郎是路人。
+```
+
 ## 寄人
 ### 唐代：张泌
 ```
@@ -1546,7 +1553,7 @@
 ### 唐代：许浑
 ```
 一上高城万里愁，蒹葭杨柳似汀洲。
-溪云初起日沉阁，山雨欲来风满楼。(沉 通：沈)
+溪云初起日沉阁，山雨欲来风满楼。
 鸟下绿芜秦苑夕，蝉鸣黄叶汉宫秋。
 行人莫问当年事，故国东来渭水流。
 ```
