--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -437,12 +437,14 @@
 凌波不过横塘路，但目送、芳尘去。
 锦瑟华年谁与度？月桥花院，琐窗朱户，只有春知处。
 飞云冉冉蘅皋暮，彩笔新题断肠句。
-试问闲情都几许？一川烟草，满城风絮，梅子黄时雨。(版本一)
+试问闲情都几许？
+一川烟草，满城风絮，梅子黄时雨。(版本一)
 
 凌波不过横塘路，但目送、芳尘去。
 锦瑟华年谁与度？月台花榭，琐窗朱户，只有春知处。
 碧云冉冉蘅皋暮，彩笔新题断肠句。
-试问闲愁都几许？一川烟草，满城风絮，梅子黄时雨。(版本二)
+试问闲愁都几许？
+一川烟草，满城风絮，梅子黄时雨。(版本二)
 ```
 
 ## 南柯子·山冥云阴重
@@ -844,7 +846,7 @@
 梦后楼台高锁，酒醒帘幕低垂。
 去年春恨却来时。落花人独立，微雨燕双飞。 
 记得小蘋初见，两重心字罗衣。
-琵琶弦上说相思。当时明月在，曾照彩云归。(蘋 通：苹)
+琵琶弦上说相思。当时明月在，曾照彩云归。
 ```
 
 ## 蝶恋花·笑艳秋莲生绿浦
