add day011 and update some other

--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -1,7 +1,7 @@
 ## 100天100个项目
 
 [Day 001 - 注册页面](day001.html)  
-[Day 002 - 原生JS实现轮播图](day002.html)  //TODO  
+[Day 002 - 原生JS实现轮播图](day002.html)  
 [Day 003 - 下拉菜单](day003.html)  
 [Day 004 - 响应式下拉菜单](day004.html)  
 [Day 005 - mask 遮罩层](day005.html)  
@@ -9,8 +9,9 @@
 [Day 007 - 旋转相册](day007.html)  
 [Day 008 - 点击图片放大至前端](day008.html)  //TODO:页面不是顺畅滑动
 [Day 009 - 元素拖动](day009.html)  
+[Day 009.5 - 另一个版本元素拖动](day009.5.html)  
 [Day 010 - js实现网页版计算器](day010.html)  
-[](day011.html)  
+[Day 011 - js实现windwos10计算器全部功能](day011.html)  
 [](day012.html)  
 [Day 013 - 所有单位的转换](day013.html)  
 [Day 014 - 化学元素周期表](day014.html)  
