--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -7,9 +7,9 @@
 [Day 005 - mask 遮罩层](day005.html)  
 [](day006.html)  
 [Day 007 - 旋转相册](day007.html)  
-[Day 008 - 点击图片放大至前端](day008.html)  //TODO:页面不是顺畅滑动
+[Day 008 - 点击图片放大至前端](day008.html)  //TODO:页面不是顺畅滑动  
 [Day 009 - 元素拖动](day009.html)  
-[Day 009.5 - 另一个版本元素拖动](day009.5.html)  
+[Day 009_1 - 另一个版本元素拖动](day009_1.html)  
 [Day 010 - js实现网页版计算器](day010.html)  
 [Day 011 - js实现windwos10计算器全部功能](day011.html)  
 [](day012.html)  
