--- a/poetry/现代诗.md
+++ b/poetry/现代诗.md
@@ -12,6 +12,10 @@
 - [余光中 - 寻李白](#寻李白)
 - [余光中 - 绝色](#绝色)
 - [马东 - 无题](#无题)
+- [北岛 - 回答](#回答)
+- [戴望舒 - 烦忧](#烦忧)
+- [食指 - 相信未来](#相信未来)
+- [曾卓 - 悬崖边的树](#悬崖边的树)
 
 ## 面朝大海，春暖花开
 ### 海子
@@ -403,4 +407,107 @@
 邀酒摧肠三杯醉，寻香惊梦五更寒。
 钗头凤斜卿有泪，荼蘼花了我无缘。
 小楼寂寞新雨月，也难如钩也难圆。
+```
+
+## 回答
+### 北岛
+```
+卑鄙是卑鄙者的通行证，
+高尚是高尚者的墓志铭。
+看吧，在那镀金的天空中，
+飘满了死者弯曲的倒影。
+冰川纪过去了，
+为什么到处都是冰凌？
+好望角发现了，
+为什么死海里千帆相竞？
+我来到这个世界上，
+只带着纸、绳索和身影，
+为了在审判之前，
+宣读那些被判决了的声音：
+告诉你吧，世界，
+我——不——相——信！
+纵使你脚下有一千名挑战者，
+那就把我算做第一千零一名。
+我不相信天是蓝的，
+我不相信雷的回声；
+我不相信梦是假的，
+我不相信死无报应。
+如果海洋注定要决堤，
+就让所有的苦水都注入我心中；
+如果陆地注定要上升，
+就让人类重新选择生存的峰顶。
+新的转机和闪闪的星斗，
+正在缀满没有遮拦的天空，
+那是五千年的象形文字，
+那是未来人们凝视的眼睛。
+```
+
+## 烦忧
+### 戴望舒
+```
+说是寂寞的秋的清愁，
+说是辽远的海的相思；
+假如有人问我的烦忧，
+我不敢说出你的名字。
+----
+我不敢说出你的名字：
+假如有人问我的烦忧，
+说是辽远的海的相思，
+说是寂寞的秋的清愁。
+```
+
+## 食指
+### 相信未来
+```
+当蜘蛛网无情地查封了我的炉台
+当灰烬的余烟叹息着贫困的悲哀
+我依然固执地铺平失望的灰烬
+用美丽的雪花写下：相信未来
+
+当我的紫葡萄化为深秋的露水
+当我的鲜花依偎在别人的情怀
+我依然固执地用凝霜的枯藤
+在凄凉的大地上写下：相信未来
+
+我要用手指那涌向天边的排浪
+我要用手掌那托住太阳的大海
+摇曳着曙光那枝温暖漂亮的笔杆
+用孩子的笔体写下：相信未来
+
+我之所以坚定地相信未来
+是我相信未来人们的眼睛
+她有拨开历史风尘的睫毛
+她有看透岁月篇章的瞳孔
+
+不管人们对于我们腐烂的皮肉
+那些迷途的惆怅、失败的苦痛
+是寄予感动的热泪、深切的同情
+还是给以轻蔑的微笑、辛辣的嘲讽
+
+我坚信人们对于我们的脊骨
+那无数次的探索、迷途、失败和成功
+一定会给予热情、客观、公正的评定
+是的，我焦急地等待着他们的评定
+
+朋友，坚定地相信未来吧
+相信不屈不挠的努力
+相信战胜死亡的年轻
+相信未来、热爱生命
+```
+
+## 曾卓
+### 悬崖边的树
+```
+不知道是什么奇异的风
+将一棵树吹到了那边——
+平原的尽头
+临近深谷的悬崖上
+它倾听远处森林的喧哗
+和深谷中小溪的歌唱
+它孤独地站在那里
+显得寂寞而又倔强
+它的弯曲的身体
+留下了风的形状
+它似乎即将倾跌进深谷里
+却又像是要展翅飞翔……
 ```
