day006 todolist completed

--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -1,68 +1,68 @@
 ## 100天100个项目
 
-[Day 001 - 注册页面](day001.html)
-[Day 002 - 原生JS实现轮播图](day002.html)
-[Day 003 - 下拉菜单](day003.html)
-[Day 004 - 响应式下拉菜单](day004.html)
-[Day 005 - mask 遮罩层](day005.html)
-[Day 006 - todolist](day006.html)  // TODO:
-[Day 007 - 旋转相册](day007.html)
-[Day 008 - 点击图片放大至前端](day008.html)  //TODO:页面不是顺畅滑动
-[Day 009 - 元素拖动](day009.html)
-[Day 009_1 - 另一个版本元素拖动](day009_1.html)
-[Day 010 - js实现网页版计算器](day010.html)  //TODO:
-[Day 011 - js实现windwos10计算器全部功能](day011.html)
-[](day012.html)
-[Day 013 - 所有单位的转换](day013.html)
-[Day 014 - 化学元素周期表](day014.html)
-[](day015.html)
-[Day 016 - 下雨动画](day016.html)
-[Day 017 - 网页版天气预报](day017.html)
-[Day 018 - 手机旋转属性](day018.html)
-[Day 019 - 手风琴效果菜单](day019.html)
-[Day 020 - Todo](day020.html)
-[Day 021 - 网页版微信]()
-[Day 022 - 弹幕](day022.html)  //TODO
-[Day 023 - 苹果电脑外观效果图](day023.html)
-[Day 024 - Max OS X 的 Dock效果]()
-[Day 025 - 模拟书本的翻页效果]()
-[Day 026 - Fancy watch](day026.html)
-[Day 027 - 电商放大镜效果](day027.html)
-[Day 028 - 返回顶部](day028.html)
-[Day 029 - Canvas画板](day029.html)  //TODO
-[Day 030 - 二，八，十，十六进制的转换](day030.html)
-[Day 031 - 富文本编辑器 version 0.1](day031.html)
-[Day 032 - 日历](day032.html)  // TOTO
-[Day 033 - 搜索提示](day033.html)
-[Day 034 - 模仿知乎点赞动画](day034.html)
-[Day 035 - 各种物理量的计算](day035.html)
-[Day 036 - 摩尔斯码转化](day036.html)
-[Day 037 - 粒子效果](day037.html)
-[Day 038 - 闹钟，倒计时，秒表]()
-[Day 039 - CSS实现各种形状](day039.html)
-[Day 040 - 杨辉三角](day040.html)
-[Day 041 - 页面浏览进度条](day041.html)
-[](day042.html)
-[Day 043 - 获取按键的keyCode](day043.html)
-[Day 044 - 显示二维码](day044.html)
-[](day045.html)
-[Day 046 - 人生进度条](day046.html)
-[](day047.html)
-[Day 048 - 用CSS实现26个字母](day048.html)
-[Day 049 - 判断两个子网是否位于同一个网络](day049.html)
-[Day 050 - gank.io](day050.html)
-[Day 051 - transform: 3D](day051.html)
-[Day 052 - transform：3D魔方](day052.html)
-[Day 053 - 钟表](day053.html)
-[Day 054 - 地图](day054.html)
-[Day 055 - 锤子科技首页 banner3D效果](day055.html)
-[Day 056 - 懒加载](day056.html)
-[Day 057 - 节拍器](day057.html)  // TODO
-[Day 058 - 贝塞尔曲线](day058.html)  //TODO
-[Day 059 - 太阳系](day059.html)  //TODO
-[Day 060 - JavaScript实现撞击边界反弹](day060.html)
-[Day 061 - 随机获取一句诗词](day061.html)
-[Day 062 - 歌词显示器](day062.html)
-[Day 063 - CSS实现两个小球融合效果](day063.html)
-[Day 064 - base64的加密和解密](day064.html)
-[Day 065 - 任意内容转换为base64](day065.html)
+[Day 001 - 注册页面](day001.html)  
+[Day 002 - 原生JS实现轮播图](day002.html)  
+[Day 003 - 下拉菜单](day003.html)  
+[Day 004 - 响应式下拉菜单](day004.html)  
+[Day 005 - mask 遮罩层](day005.html)  
+[Day 006 - todolist](day006.html)  // TODO:  
+[Day 007 - 旋转相册](day007.html)  
+[Day 008 - 点击图片放大至前端](day008.html)  //TODO:页面不是顺畅滑动  
+[Day 009 - 元素拖动](day009.html)  
+[Day 009_1 - 另一个版本元素拖动](day009_1.html)  
+[Day 010 - js实现网页版计算器](day010.html)  //TODO:  
+[Day 011 - js实现windwos10计算器全部功能](day011.html)  
+[](day012.html)  
+[Day 013 - 所有单位的转换](day013.html)  
+[Day 014 - 化学元素周期表](day014.html)  
+[](day015.html)  
+[Day 016 - 下雨动画](day016.html)  
+[Day 017 - 网页版天气预报](day017.html)  
+[Day 018 - 手机旋转属性](day018.html)  
+[Day 019 - 手风琴效果菜单](day019.html)  
+[Day 020 - Todo](day020.html)  
+[Day 021 - 网页版微信]()  
+[Day 022 - 弹幕](day022.html)  //TODO:  
+[Day 023 - 苹果电脑外观效果图](day023.html)  
+[Day 024 - Max OS X 的 Dock效果]()  
+[Day 025 - 模拟书本的翻页效果]()  
+[Day 026 - Fancy watch](day026.html)  
+[Day 027 - 电商放大镜效果](day027.html)  
+[Day 028 - 返回顶部](day028.html)  
+[Day 029 - Canvas画板](day029.html)  //TODO:  
+[Day 030 - 二，八，十，十六进制的转换](day030.html)  
+[Day 031 - 富文本编辑器 version 0.1](day031.html)  
+[Day 032 - 日历](day032.html)  // TODO:  
+[Day 033 - 搜索提示](day033.html)  
+[Day 034 - 模仿知乎点赞动画](day034.html)  
+[Day 035 - 各种物理量的计算](day035.html)  
+[Day 036 - 摩尔斯码转化](day036.html)  
+[Day 037 - 粒子效果](day037.html)  
+[Day 038 - 闹钟，倒计时，秒表]()  
+[Day 039 - CSS实现各种形状](day039.html)  
+[Day 040 - 杨辉三角](day040.html)  
+[Day 041 - 页面浏览进度条](day041.html)  
+[](day042.html)  
+[Day 043 - 获取按键的keyCode](day043.html)  
+[Day 044 - 显示二维码](day044.html)  
+[](day045.html)  
+[Day 046 - 人生进度条](day046.html)  
+[](day047.html)  
+[Day 048 - 用CSS实现26个字母](day048.html)  
+[Day 049 - 判断两个子网是否位于同一个网络](day049.html)  
+[Day 050 - gank.io](day050.html)  
+[Day 051 - transform: 3D](day051.html)  
+[Day 052 - transform：3D魔方](day052.html)  
+[Day 053 - 钟表](day053.html)  
+[Day 054 - 地图](day054.html)  
+[Day 055 - 锤子科技首页 banner3D效果](day055.html)  
+[Day 056 - 懒加载](day056.html)  
+[Day 057 - 节拍器](day057.html)  // TODO::  
+[Day 058 - 贝塞尔曲线](day058.html)  //TODO:  
+[Day 059 - 太阳系](day059.html)  //TODO:  
+[Day 060 - JavaScript实现撞击边界反弹](day060.html)  
+[Day 061 - 随机获取一句诗词](day061.html)  
+[Day 062 - 歌词显示器](day062.html)  
+[Day 063 - CSS实现两个小球融合效果](day063.html)  
+[Day 064 - base64的加密和解密](day064.html)  
+[Day 065 - 任意内容转换为base64](day065.html)  
