--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -5,27 +5,27 @@
 [Day 003 - 下拉菜单](day003.html)  
 [Day 004 - 响应式下拉菜单](day004.html)  
 [Day 005 - mask 遮罩层](day005.html)  
-[Day 006 - todolist](day006.html)  // TODO:  
+[Day 006 - todolist](day006.html)  
 [Day 007 - 旋转相册](day007.html)  
 [Day 008 - 点击图片放大至前端](day008.html)  //TODO:页面不是顺畅滑动  
 [Day 009 - 元素拖动](day009.html)  
 [Day 009_1 - 另一个版本元素拖动](day009_1.html)  
-[Day 010 - js实现网页版计算器](day010.html)  //TODO:  
+[Day 010 - js实现网页版计算器](day010.html)  //TODO:功能还未完全实现  
 [Day 011 - js实现windwos10计算器全部功能](day011.html)  
-[](day012.html)  
+[Day 012 - 防抖和节流](day012.html)  
 [Day 013 - 所有单位的转换](day013.html)  
 [Day 014 - 化学元素周期表](day014.html)  
-[](day015.html)  
-[Day 016 - 下雨动画](day016.html)  
+[Day 015 - 搜索框的输入提示](day015.html)  // TODO:  
+[Day 016 - 下雨动画](day016.html)  // TODO: 需要重写
 [Day 017 - 网页版天气预报](day017.html)  
 [Day 018 - 手机旋转属性](day018.html)  
 [Day 019 - 手风琴效果菜单](day019.html)  
 [Day 020 - Todo](day020.html)  
-[Day 021 - 网页版微信]()  
+[Day 021 - 网页版微信]()  //TODO:  
 [Day 022 - 弹幕](day022.html)  //TODO:  
 [Day 023 - 苹果电脑外观效果图](day023.html)  
 [Day 024 - Max OS X 的 Dock效果]()  
-[Day 025 - 模拟书本的翻页效果]()  
+[Day 025 - 模拟书本的翻页效果]()  //TODO:  
 [Day 026 - Fancy watch](day026.html)  
 [Day 027 - 电商放大镜效果](day027.html)  
 [Day 028 - 返回顶部](day028.html)  
