--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -30,7 +30,7 @@
 ## 南歌子词二首 / 新添声杨柳枝词
 ### 唐代：温庭筠
 ```
-一尺深红胜曲尘，天生旧物不如新。(胜曲尘 一作：蒙曲尘)
+一尺深红蒙曲尘，天生旧物不如新。
 合欢桃核终堪恨，里许元来别有人。
 
 井底点灯深烛伊，共郎长行莫围棋。
@@ -49,7 +49,7 @@
 ```
 晨起动征铎，客行悲故乡。
 鸡声茅店月，人迹板桥霜。
-槲叶落山路，枳花明驿墙。(明驿墙 一作：照驿墙)
+槲叶落山路，枳花照驿墙。
 因思杜陵梦，凫雁满回塘。
 ```
 
@@ -96,7 +96,7 @@
 空里流霜不觉飞，汀上白沙看不见。
 江天一色无纤尘，皎皎空中孤月轮。
 江畔何人初见月？江月何年初照人？
-人生代代无穷已，江月年年只相似。(只相似 一作：望相似)
+人生代代无穷已，江月年年望相似。
 不知江月待何人，但见长江送流水。
 白云一片去悠悠，青枫浦上不胜愁。
 谁家今夜扁舟子？何处相思明月楼？
@@ -107,7 +107,7 @@
 昨夜闲潭梦落花，可怜春半不还家。
 江水流春去欲尽，江潭落月复西斜。
 斜月沉沉藏海雾，碣石潇湘无限路。
-不知乘月几人归，落月摇情满江树。(落月 一作：落花)
+不知乘月几人归，落月摇情满江树。
 ```
 
 ## 题都城南庄  
@@ -132,7 +132,7 @@
 相见时难别亦难，东风无力百花残。
 春蚕到死丝方尽，蜡炬成灰泪始干。
 晓镜但愁云鬓改，夜吟应觉月光寒。
-蓬山此去无多路，青鸟殷勤为探看。(蓬山 一作：蓬莱)
+蓬莱此去无多路，青鸟殷勤为探看。
 ```
 
 ## 赠荷花
@@ -140,7 +140,7 @@
 ```
 世间花叶不相伦，花入金盆叶作尘。
 惟有绿荷红菡萏，卷舒开合任天真。
-此花此叶常相映，翠减红衰愁杀人。(常相映 一作：长相映)
+此花此叶常相映，翠减红衰愁杀人。
 ```
 
 ## 无题四首
@@ -279,7 +279,6 @@
 ```
 银烛秋光冷画屏，轻罗小扇扑流萤。
 天阶夜色凉如水，卧看牵牛织女星。
-(天阶 一作：天街；卧看 一作：坐看)
 ```
 
 ## 江南春
@@ -299,7 +298,7 @@
 ## 山行
 ### 唐代：杜牧
 ```
-远上寒山石径斜，白云深处有人家。(深处 一作：生处)
+远上寒山石径斜，白云深处有人家。
 停车坐爱枫林晚，霜叶红于二月花。
 ```
 
@@ -364,7 +363,7 @@
 ## 遣怀
 ### 唐代：杜牧
 ```
-落魄江南载酒行，楚腰纤细掌中轻。(江南 一作：江湖；纤细 一作：肠断)
+落魄江南载酒行，楚腰纤细掌中轻。
 十年一觉扬州梦，赢得青楼薄幸名。
 ```
 
@@ -408,8 +407,8 @@
 ## 金缕衣
 ### 唐代：佚名
 ```
-劝君莫惜金缕衣，劝君惜取少年时。(惜取 一作：须取)
-花开堪折直须折，莫待无花空折枝。(花开 一作：有花)
+劝君莫惜金缕衣，劝君惜取少年时。
+花开堪折直须折，莫待无花空折枝。
 ```
 
 ## 白雪歌送武判官归京
@@ -418,7 +417,7 @@
 北风卷地白草折，胡天八月即飞雪。
 忽如一夜春风来，千树万树梨花开。
 散入珠帘湿罗幕，狐裘不暖锦衾薄。
-将军角弓不得控，都护铁衣冷难着。(难着 一作：犹著)
+将军角弓不得控，都护铁衣冷难着。
 瀚海阑干百丈冰，愁云惨淡万里凝。
 中军置酒饮归客，胡琴琵琶与羌笛。
 纷纷暮雪下辕门，风掣红旗冻不翻。
