--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -651,6 +651,15 @@
 凭谁问，廉颇老矣，尚能饭否？
 ```
 
+### 鹧鸪天·有客慨然谈功名因追念少年时事戏作
+## 宋代： 辛弃疾
+```
+壮岁旌旗拥万夫，锦襜突骑渡江初。
+燕兵夜娖银胡觮，汉箭朝飞金仆姑。
+追往事，叹今吾，春风不染白髭须。
+却将万字平戎策，换得东家种树书。
+```
+
 ## 鹧鸪天·代人赋
 ### 宋代：辛弃疾
 ```
