--- a/poetry/两汉.md
+++ b/poetry/两汉.md
@@ -17,6 +17,13 @@
 宁不知倾城与倾国？佳人难再得。
 ```
 
+## 古艳歌
+### 两汉： 佚名
+```
+茕茕白兔，东走西顾。
+衣不如新，人不如故。
+```
+
 ## 箜篌引
 ```
 公无渡河，公竟渡河。
@@ -38,6 +45,19 @@
 上言加餐食，下言长相忆。
 ```
 
+## 十五从军征
+### 两汉： 佚名
+```
+十五从军征，八十始得归。
+道逢乡里人，家中有阿谁？
+遥看是君家，松柏冢累累。(遥看 一作：遥望)
+兔从狗窦入，雉从梁上飞。
+中庭生旅谷，井上生旅葵。
+舂谷持作饭，采葵持作羹。
+羹饭一时熟，不知贻阿谁？
+出门东向看，泪落沾我衣。
+```
+
 ## 有所思
 ### 两汉：佚名
 ```
@@ -50,6 +70,24 @@
 鸡鸣狗吠，兄嫂当知之。
 妃呼狶！
 秋风肃肃晨风飔，东方须臾高知之！
+```
+
+## 江南
+### 两汉： 佚名
+```
+江南可采莲，莲叶何田田，鱼戏莲叶间。
+鱼戏莲叶东，鱼戏莲叶西，
+鱼戏莲叶南，鱼戏莲叶北。
+```
+
+## 长歌行
+### 两汉： 佚名
+```
+青青园中葵，朝露待日晞。
+阳春布德泽，万物生光辉。
+常恐秋节至，焜黄华叶衰。
+百川东到海，何时复西归？
+少壮不努力，老大徒伤悲。
 ```
 
 ## 凤求凰
