--- a/poetry/先秦.md
+++ b/poetry/先秦.md
@@ -10,12 +10,40 @@
 山有木兮木有枝，心悦君兮君不知。
 ```
 
+## 君子于役
+### 先秦：佚名
+```
+君子于役，不知其期，曷至哉？
+鸡栖于埘，日之夕矣，羊牛下来。
+君子于役，如之何勿思！
+
+君子于役，不日不月，曷其有佸？
+鸡栖于桀，日之夕矣，羊牛下括。
+君子于役，苟无饥渴！
+```
+
+## 悲歌
+### 两汉： 佚名
+```
+悲歌可以当泣，远望可以当归。
+思念故乡，郁郁累累。
+欲归家无人，欲渡河无船。
+心思不能言，肠中车轮转。
+```
+
 ## 击壤歌
 ### 先秦：佚名
 ```
 日出而作，日入而息。
 凿井而饮，耕田而食。
 帝力于我何有哉！
+```
+
+## 荆轲歌 / 渡易水歌
+### 先秦： 佚名
+```
+风萧萧兮易水寒，壮士一去兮不复还。
+探虎穴兮入蛟宫，仰天呼气兮成白虹。(此句疑为后人补作)
 ```
 
 ## 卿云歌
