--- a/poetry/现代诗.md
+++ b/poetry/现代诗.md
@@ -9,6 +9,18 @@
 - [西贝 - 直到这个世界禁止爱你](#直到这个世界禁止爱你)
 - [陈毅 - 梅岭三章](#梅岭三章)
 - [毛泽东 - 七绝·改西乡隆盛诗赠父亲](#七绝·改西乡隆盛诗赠父亲)
+- [毛泽东 - 沁园春·雪](#沁园春·雪)
+- [毛泽东 - 沁园春·长沙](#沁园春·长沙)
+- [毛泽东 - 水调歌头·重上井冈山](#水调歌头·重上井冈山)
+- [毛泽东 - 蝶恋花·答李淑一](#蝶恋花·答李淑一)
+- [毛泽东 - 七绝·咏蛙](#七绝·咏蛙)
+- [毛泽东 - 卜算子·咏梅](#卜算子·咏梅)
+- [毛泽东 - 忆秦娥·娄山关](#忆秦娥·娄山关)
+- [毛泽东 - 七律·人民解放军占领南京](#七律·人民解放军占领南京)
+- [毛泽东 - 七律·长征](#七律·长征)
+- [毛泽东 - 清平乐·六盘山](#清平乐·六盘山)
+- [毛泽东 - 采桑子·重阳](#采桑子·重阳)
+- [毛泽东 - 浪淘沙·北戴河](#浪淘沙·北戴河)
 - [余光中 - 寻李白](#寻李白)
 - [余光中 - 绝色](#绝色)
 - [马东 - 无题](#无题)
@@ -181,13 +193,32 @@
 ### 近现代：毛泽东
 ```
 北国风光，千里冰封，万里雪飘。
-望长城内外，惟余莽莽；大河上下，顿失滔滔。
+望长城内外，惟余莽莽；
+大河上下，顿失滔滔。
 山舞银蛇，原驰蜡象，欲与天公试比高。
 须晴日，看红装素裹，分外妖娆。
+
 江山如此多娇，引无数英雄竞折腰。
-惜秦皇汉武，略输文采；唐宗宋祖，稍逊风骚。
+惜秦皇汉武，略输文采；
+唐宗宋祖，稍逊风骚。
 一代天骄，成吉思汗，只识弯弓射大雕。
 俱往矣，数风流人物，还看今朝。
+```
+
+## 沁园春·长沙
+### 近现代：毛泽东
+```
+独立寒秋，湘江北去，橘子洲头。
+看万山红遍，层林尽染；
+漫江碧透，百舸争流。
+鹰击长空，鱼翔浅底，万类霜天竞自由。
+怅寥廓，问苍茫大地，谁主沉浮？
+
+携来百侣曾游，忆往昔峥嵘岁月稠。
+恰同学少年，风华正茂；
+书生意气，挥斥方遒。
+指点江山，激扬文字，粪土当年万户侯。 
+曾记否，到中流击水，浪遏飞舟？
 ```
 
 ## 水调歌头·重上井冈山
@@ -218,19 +249,6 @@
 ```
 独坐池塘如虎踞，绿荫树下养精神。
 春来我不先开口，哪个虫儿敢作声。
-```
-
-## 沁园春·长沙
-### 近现代：毛泽东
-```
-独立寒秋，湘江北去，橘子洲头。
-看万山红遍，层林尽染；漫江碧透，百舸争流。
-鹰击长空，鱼翔浅底，万类霜天竞自由。
-怅寥廓，问苍茫大地，谁主沉浮？
-携来百侣曾游，忆往昔峥嵘岁月稠。
-恰同学少年，风华正茂；书生意气，挥斥方遒。
-指点江山，激扬文字，粪土当年万户侯。 
-曾记否，到中流击水，浪遏飞舟？
 ```
 
 ## 卜算子·咏梅
