--- a/post/前端学习路径.md
+++ b/post/前端学习路径.md
@@ -16,19 +16,19 @@
 - [x] 盒模型  
 - [x] 伪类 / 伪元素  
 - [x] margin合并  
-- [ ] 浮动 float  
-- [ ] 定位 position  
-- [ ] BFC / IFC  
-- [ ] 传统布局/div+css/圣杯布局/圣双飞翼布局  
-- [ ] flex / grid
+- [x] 浮动 float  
+- [x] 定位 position  
+- [x] BFC / IFC  
+- [x] 传统布局/div+css/圣杯布局/双飞翼布局  
+- [x] flex / grid
 - [ ] 实现各种居中  
 - [ ] 字体图标/SVG图标  
 - [ ] 浏览器兼容  
-- [ ] CSS动画animation  
+- [x] CSS动画animation  
 - [x] CSS3圆角border-radius
-- [ ] 渐变radial-gradient,line-gradient
-- [ ] 阴影box-shadow
-- [ ] 过渡transition
+- [x] 渐变radial-gradient,linear-gradient
+- [x] 阴影box-shadow
+- [x] 过渡transition
 - [ ] 形变transform
 
 
