--- a/post/前端学习路径.md
+++ b/post/前端学习路径.md
@@ -61,7 +61,7 @@
 - [ ] Canvas
 
 #### 3, BOM  
-- [ ] Navigator  
+- [x] Navigator  
 - [ ] LocalStorage/SessionStorage  
 - [ ] History  
 - [ ] document.cookie  
@@ -72,6 +72,7 @@
 - [ ] JSONP  
 - [ ] CORS  
 - [ ] 跨域请求  
+- [ ] 操作文件
 
 #### 5, 代码套路  
 - [ ] 意大利面条式  
@@ -115,9 +116,12 @@
 - [ ] ES6新增数据类型 
 - [ ] 运算符优先级  
 - [ ] 作用域链，闭包，柯里化  
-- [ ] 异步调用，回调函数，promise,async/await 
-- [ ] setTimeout，事件循环，队列任务  
-- [ ] 事件委托  
+- [ ] 同步，异步调用，
+- [ ] 回调函数，
+- [ ] promise,
+- [ ] async/await 
+- [x] setTimeout，事件循环，队列任务  
+- [x] 事件委托  
 - [ ] 防抖与节流  
 - [ ] ES6 Proxy & Refect  
 - [ ] this  
