--- a/post/前端学习路径.md
+++ b/post/前端学习路径.md
@@ -110,7 +110,7 @@
 
 #### 10, Node.js  
 
-#### 11, 知识进阶 
+#### 11, 原生JavaScript核心，重点 
 - [ ] 浏览器渲染机制 /加载顺序 /延迟加载 /reflow，repaint 
 - [ ] 垃圾回收机制  
 - [ ] ES6新增数据类型 
@@ -118,20 +118,28 @@
 - [ ] 作用域链，闭包，柯里化  
 - [ ] 同步，异步调用，
 - [ ] 回调函数，
+- [ ] 递归
+- [ ] 链式函数，
 - [ ] promise,
+- [ ] prototype,
+- [ ] constructor,
+- [ ] __proto__,
 - [ ] async/await 
 - [x] setTimeout，事件循环，队列任务  
 - [x] 事件委托  
 - [ ] 防抖与节流  
+- [ ] 通过for in动态批量添加属性  
 - [ ] ES6 Proxy & Refect  
 - [ ] this  
+- [ ] new的过程 
+- [ ] 词法分析
 - [ ] 原型链  
 - [ ] ES6模块化 
 - [ ] ES5/6继承 
 - [ ] CSS3之3D  
 - [ ] JSON(JSON.parse, JSON.stringify)  
 - [ ] 构造函数  
-- [ ] new的过程 
+- [ ] 数据属性，访问器属性  
 - [ ] call，apply，bind及其实现 
 
 #### 12, 拓展：移动端 
