--- a/post/前端学习路径.md
+++ b/post/前端学习路径.md
@@ -21,7 +21,7 @@
 - [x] BFC / IFC  
 - [x] 传统布局/div+css/圣杯布局/双飞翼布局  
 - [x] flex / grid
-- [ ] 实现各种居中  
+- [x] 实现各种居中  
 - [ ] 字体图标/SVG图标  
 - [ ] 浏览器兼容  
 - [x] CSS动画animation  
