--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -32,7 +32,7 @@
 [Day 029 - Canvas画板](day029.html)  //TODO:  
 [Day 030 - 二，八，十，十六进制的转换](day030.html)  
 [Day 031 - 富文本编辑器 version 0.1](day031.html)  
-[Day 032 - 日历](day032.html)  // DOING:  
+[Day 032 - 日历](day032.html)  
 [Day 033 - 搜索提示](day033.html)  
 [Day 034 - 模仿知乎点赞动画](day034.html)  
 [Day 035 - 各种物理量的计算](day035.html)  
@@ -42,7 +42,7 @@
 [Day 039 - CSS实现各种形状](day039.html)  
 [Day 040 - 杨辉三角](day040.html)  
 [Day 041 - 页面浏览进度条](day041.html)  
-[](day042.html)  
+[Day 042 - Rubik Loading](day042.html)  
 [Day 043 - 获取按键的keyCode](day043.html)  
 [Day 044 - 显示二维码](day044.html)  
 [](day045.html)  
