--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -11,7 +11,7 @@
 [Day 009 - 元素拖动](day009.html)  
 [Day 009_1 - 另一个版本元素拖动](day009_1.html)  
 [Day 010 - js实现网页版计算器](day010.html)  //TODO:功能还未完全实现  
-[Day 011 - js实现windwos10计算器全部功能](day011.html)  
+[Day 011 - ](day011.html)  
 [Day 012 - 防抖和节流](day012.html)  
 [Day 013 - 所有单位的转换](day013.html)  
 [Day 014 - 化学元素周期表](day014.html)  
