--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -42,7 +42,7 @@
 [Day 039 - CSS实现各种形状](day039.html)  
 [Day 040 - 杨辉三角](day040.html)  
 [Day 041 - 页面浏览进度条](day041.html)  
-[Day 042 - Rubik Loading](day042.html)  
+[Day 042 - Rubik Loading](day042.html)  //TODO:  
 [Day 043 - 获取按键的keyCode](day043.html)  
 [Day 044 - 显示二维码](day044.html)  
 [](day045.html)  
